@@ -80,10 +80,12 @@ function _advanced_forum_preprocess_forum_list(&$variables) {
 
     // If there are new topics/posts, change the icon
     if ($forum->new_topics || $forum->new_posts) {
-      $variables['forums'][$id]->icon = advanced_forum_theme_image(t('forum-folder-new-posts.png'), t('new post folder'));
+      $variables['forums'][$id]->icon_classes = "forum-icon forum-folder-new-posts";
+      $variables['forums'][$id]->icon_text = t("New posts");
     }
     else {
-      $variables['forums'][$id]->icon = advanced_forum_theme_image(t('forum-folder.png'), t('folder'));
+      $variables['forums'][$id]->icon_classes = "forum-icon forum-folder";
+      $variables['forums'][$id]->icon_text = t("No new");
     }
     
     if ($variables['forums'][$id]->depth > 1) {
