@@ -1,34 +1,74 @@
-.forum-folder-legend .forum-folder-new-posts {
-  background: transparent url(images/forum-folder-new-posts.png) no-repeat top left;
+/* Forum list ****************************************************************/
+.forum-folder {
+  background: transparent url(images/forum-folder.png) no-repeat center center;
 }
 
 .forum-folder-legend .forum-folder {
   background: transparent url(images/forum-folder.png) no-repeat top left;
 }
 
-.forum-topic-legend .topic-icon-new-posts {
-  background: transparent url(images/topic-new.png) no-repeat top left;
+.forum-folder-new-posts {
+  background: transparent url(images/forum-folder-new-posts.png) no-repeat center center;
+}
+
+.forum-folder-legend .forum-folder-new-posts {
+  background: transparent url(images/forum-folder-new-posts.png) no-repeat top left;
+}
+
+/* Topic list ****************************************************************/
+.topic-icon-no-new-posts {
+  background: transparent url(images/topic-default.png) no-repeat center center;
 }
 
 .forum-topic-legend .topic-icon-no-new-posts {
   background: transparent url(images/topic-default.png) no-repeat top left;
 }
 
-.forum-topic-legend .topic-icon-hot-new-posts {
-  background: transparent url(images/topic-hot-new.png) no-repeat top left;
+.topic-icon-new-posts {
+  background: transparent url(images/topic-new.png) no-repeat center center;
+}
+
+.forum-topic-legend .topic-icon-new-posts {
+  background: transparent url(images/topic-new.png) no-repeat top left;
+}
+
+.topic-icon-hot-no-new-posts {
+  background: transparent url(images/topic-hot.png) no-repeat center center;
 }
 
 .forum-topic-legend .topic-icon-hot-no-new-posts {
   background: transparent url(images/topic-hot.png) no-repeat top left;
 }
 
+.topic-icon-hot-new-posts {
+  background: transparent url(images/topic-hot-new.png) no-repeat center center;
+}
+
+.forum-topic-legend .topic-icon-hot-new-posts {
+  background: transparent url(images/topic-hot-new.png) no-repeat top left;
+}
+
+.topic-icon-sticky-topic {
+  background: transparent url(images/topic-sticky.png) no-repeat center center;
+}
+
 .forum-topic-legend .topic-icon-sticky-topic {
   background: transparent url(images/topic-sticky.png) no-repeat top left;
+}
+
+.topic-icon-locked-topic {
+  background: transparent url(images/topic-closed.png) no-repeat center center;
 }
 
 .forum-topic-legend .topic-icon-locked-topic {
   background: transparent url(images/topic-closed.png) no-repeat top left;
 }
+
+
+
+
+
+
 
 
 
